--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,15 @@ body {
   font-size: 18px;
   color: #2D3748;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  margin: 0;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Two columns */
+  grid-template-rows: auto; /* Single row */
+  gap: 20px;
+  margin: 20px;
 }
 
 header {
@@ -9,6 +18,7 @@ header {
   color: #FFFFFF;
   text-align: center;
   padding: 20px;
+  grid-column: span 2; /* Header spans both columns */
 }
 
 header h1 {
@@ -25,7 +35,11 @@ header h1 {
 }
 
 .main {
-  grid-column: 2;
+  grid-column: 1; /* Main content in the first column */
+}
+
+aside {
+  grid-column: 2; /* Aside in the second column */
 }
 
 h2 {
@@ -39,10 +53,6 @@ h2 {
 
 .blog-post-date {
   color: #718096;
-}
-
-aside {
-  grid-column: 1;
 }
 
 h3 {
@@ -67,7 +77,7 @@ footer {
   color: #FFFFFF;
   text-align: center;
   padding: 10px;
-  grid-column: span 3;
+  grid-column: span 2; /* Footer spans both columns */
 }
 .float-left {
   float: left;
