--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,115 @@
 body {
-  font-size: 18px;
-  color: #2D3748;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-  margin: 0;
+    font-size: 18px;
+    color: #2D3748;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    margin: 0;
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 1fr 1fr; /* Two columns */
-  grid-template-rows: auto; /* Single row */
-  gap: 20px;
-  margin: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* Two columns */
+    grid-template-rows: auto;
+    /* Single row */
+    gap: 20px;
+    margin: 20px;
 }
 
+
+
+.title-date-created h2 {
+  margin-bottom: 5px; 
+}
+
+.title-date-created p {
+  margin-top: 5px; 
+}
+
+
 header {
-  background-color: #63B3ED;
-  color: #FFFFFF;
-  text-align: center;
-  padding: 20px;
-  grid-column: span 2; /* Header spans both columns */
+    background-color: #63B3ED;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 20px;
+    grid-column: span 2;
+    /* Header spans both columns */
 }
 
 header h1 {
-  font-size: 36px;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 36px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .profile-image {
-  border-radius: 50%;
-  overflow: hidden;
-  margin: 0 auto;
-  max-width: 100%;
-  height: auto;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+    height: 200px;
+    width: 200px;
+
 }
 
 .main {
-  grid-column: 1; /* Main content in the first column */
+    grid-column: 1;
+    /* Main content in the first column */
 }
 
 aside {
-  grid-column: 2; /* Aside in the second column */
+    grid-column: 2;
+    /* Aside in the second column */
 }
 
 h2 {
-  font-size: 32px;
-  color: #48BB78;
+    font-size: 32px;
+    color: #48BB78;
 }
 
 .blog-post {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .blog-post-date {
-  color: #718096;
+    color: #718096;
 }
 
 h3 {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #about {
-  background-color: #E2E8F0;
-  padding: 10px;
+    background-color: #E2E8F0;
+    padding: 10px;
 }
 
-#social-media, #archives {
-  margin-top: 20px;
+#social-media,
+#archives {
+    margin-top: 20px;
 }
 
-#social-media a, #archives a {
-  color: #4299E1;
+#social-media a,
+#archives a {
+    color: #4299E1;
 }
 
 footer {
-  background-color: #2C5282;
-  color: #FFFFFF;
-  text-align: center;
-  padding: 10px;
-  grid-column: span 2; /* Footer spans both columns */
+    background-color: #2C5282;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 10px;
+    grid-column: span 2;
+    /* Footer spans both columns */
 }
+
 .float-left {
-  float: left;
-  max-width: 200px;
-  height: auto;
-  margin-right: 20px;
+    float: left;
+    max-width: 200px;
+    height: auto;
+    margin-right: 20px;
 }
+
 .float-right {
-  float: right;
-  max-width: 200px;
-  height: auto;
-  margin-left: 20px;
+    float: right;
+    max-width: 200px;
+    height: auto;
+    margin-left: 20px;
 }
