--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     /* Two columns */
     grid-template-rows: auto;
     /* Single row */
-    gap: 20px;
+    gap: 30px;
     margin: 20px;
 }
 
@@ -25,6 +25,19 @@ body {
   margin-top: 5px; 
 }
 
+.image-paragraph {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.img-1{
+  margin-right: 20px;
+}
+
+.img-2{
+  margin-left: 20px;
+}
 
 header {
     background-color: #63B3ED;
