--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     /* Two columns */
     grid-template-rows: auto;
     /* Single row */
-    gap: 30px;
+    gap: 100px;
     margin: 20px;
 }
 
@@ -40,9 +40,12 @@ body {
 }
 
 header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #63B3ED;
     color: #FFFFFF;
-    text-align: center;
     padding: 20px;
     grid-column: span 2;
     /* Header spans both columns */
@@ -56,7 +59,6 @@ header h1 {
 .profile-image {
     border-radius: 50%;
     overflow: hidden;
-    margin: 0 auto;
     height: 200px;
     width: 200px;
 
@@ -113,16 +115,4 @@ footer {
     /* Footer spans both columns */
 }
 
-.float-left {
-    float: left;
-    max-width: 200px;
-    height: auto;
-    margin-right: 20px;
-}
 
-.float-right {
-    float: right;
-    max-width: 200px;
-    height: auto;
-    margin-left: 20px;
-}
